# dgate-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.dgate.yaml  go.mod  go.work.sum  proxy-results.json
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml  docs-deploy.yml  e2e.yml  functional.yml  ghcr.yml  performance.yml  release.yml
cmd/dgate-cli/: main.go
cmd/dgate-cli/commands/: collection_cmd.go  document_cmd.go  domain_cmd.go  module_cmd.go  namespace_cmd.go  route_cmd.go  run_cmd.go  run_cmd_test.go  secret_cmd.go  service_cmd.go  util.go
cmd/dgate-server/: main.go
dgate-docs/: .gitlab-ci.yml  bun.lockb  package.json  tsconfig.json
dgate-docs/docs/: 010_introduction.mdx  900_faq.mdx
dgate-docs/docs/100_getting-started/: 030_dgate-server.mdx  050_dgate-cli.mdx  090_url-shortener.mdx  index.mdx
dgate-docs/docs/300_concepts/: index.mdx  routing_patterns.mdx
dgate-docs/docs/700_resources/: 01_namespaces.mdx  02_routes.mdx  03_services.mdx  04_modules.mdx  05_domains.mdx  06_secrets.mdx  07_collections.mdx  08_documents.mdx  index.mdx
dgate-v2/src/proxy/: mod.rs
dgate-v2/src/storage/: mod.rs
functional-tests/: run-all-tests.sh
functional-tests/common/: utils.sh
functional-tests/grpc/: run-test.sh
functional-tests/quic/: run-test.sh
functional-tests/websocket/: client.js  config.yaml
internal/admin/: admin_api.go  admin_fsm.go  admin_raft.go  admin_routes.go  admin_routes_test.go
internal/admin/changestate/: change_state.go
internal/admin/changestate/testutil/: change_state.go
internal/admin/routes/: collection_routes.go  domain_routes.go  misc_routes.go  module_routes.go  module_routes_test.go  namespace_routes.go  namespace_routes_test.go  route_routes.go  route_routes_test.go  secret_routes.go  service_routes.go  service_routes_test.go
internal/config/: config.go  loader.go  loader_test.go  resources.go  resources_test.go
internal/config/configtest/: dgate_configs.go
internal/pattern/: pattern_test.go
internal/proxy/: change_log.go  change_log_test.go  dynamic_proxy.go  module_extractor.go  module_mock_test.go  proxy_documents.go  proxy_handler.go  proxy_handler_test.go  proxy_metrics.go  proxy_replication.go  proxy_state.go  proxy_state_test.go  proxy_transport.go  request_context.go  runtime_context.go
internal/proxy/proxy_transport/: proxy_transport.go  proxy_transport_test.go
internal/proxy/proxystore/: proxy_store.go  proxy_store_test.go
internal/proxy/proxytest/: mock_proxy_transport.go  mock_reverse_proxy.go
internal/proxy/reverse_proxy/: reverse_proxy.go  reverse_proxy_test.go
module_examples/: merge_responses.js  modify_request.js  url_shortener.js
modules/: modify_response.js  url_fallback.js
perf-tests/: config.perf.yaml  test-admin.js
pkg/cache/: cache.go  cache_test.go
pkg/dgclient/: collection_client.go  collection_client_test.go  dgclient_test.go  document_client.go  document_client_test.go  domain_client.go  domain_client_test.go  module_client.go  module_client_test.go  namespace_client.go  namespace_client_test.go  route_client.go  route_client_test.go  secret_client.go  secret_client_test.go  service_client.go  service_client_test.go
pkg/modules/: mods.go
pkg/modules/dgate/: dgate_mod.go
pkg/modules/dgate/crypto/: crypto_mod.go
pkg/modules/dgate/exp/: exp_mod.go
pkg/modules/dgate/http/: http_mod.go
pkg/modules/dgate/state/: state_mod.go
pkg/modules/dgate/storage/: storage_mod.go
pkg/modules/extractors/: extractors.go  extractors_test.go  runtime.go  runtime_test.go
pkg/modules/testutil/: testutil.go
pkg/modules/types/: module_context.go  request.go  response_writer.go  upstream_response.go
pkg/raftadmin/: server_test.go
pkg/rafthttp/: rafthttp_test.go
pkg/resources/: document_manager.go  resource_manager.go  resource_manager_test.go
pkg/scheduler/: scheduler.go  scheduler_test.go
pkg/spec/: transformers.go
pkg/storage/: mem_storage.go
pkg/typescript/: typescript_test.go
pkg/util/: default_test.go  http_test.go  parse_test.go
pkg/util/heap/: heap_test.go
pkg/util/iplist/: iplist.go  iplist_test.go
pkg/util/keylock/: keylock.go
pkg/util/linkedlist/: linkedlist_sort_test.go  linkedlist_test.go
pkg/util/linker/: linker.go  linker_test.go
pkg/util/pattern/: pattern_test.go
pkg/util/queue/: queue_test.go
pkg/util/safe/: ref_test.go
pkg/util/sliceutil/: slice_test.go
scripts/: setup-hooks.sh
src/: lib.rs  main.rs
src/admin/: mod.rs
src/cluster/: consensus.rs  discovery.rs  mod.rs  network.rs  state_machine.rs  store.rs
src/cluster/raft/: mod.rs  network.rs  state_machine.rs  store.rs
src/cluster/tempo/: clock.rs  messages.rs  mod.rs  network.rs  state.rs
src/config/: mod.rs
src/modules/: mod.rs
src/proxy/: mod.rs
src/resources/: mod.rs
src/storage/: mod.rs
tests/: cluster_propagation_test.rs
tests/functional-tests/: README.md  run-all-tests.sh
tests/functional-tests/cluster/: README.md  run-test.sh
tests/functional-tests/common/: utils.sh
tests/functional-tests/grpc/: client.js  greeter.proto  package-lock.json
tests/functional-tests/http2/: run-test.sh  server.js
tests/functional-tests/modules/: base64_handler.js  config.yaml  document_handler.js  echo_handler.js  error_handler.js  hash_handler.js  path_params_handler.js  redirect_handler.js  request_modifier.js  response_modifier.js  run-test.sh  server.js  status_handler.js  typescript_handler.ts  write_handler.js
tests/functional-tests/persistence/: run-test.sh
tests/functional-tests/quic/: config.yaml  run-test.sh
tests/functional-tests/raft-consensus/: run-test.sh
tests/functional-tests/simple-replication/: run-test.sh
tests/functional-tests/websocket/: run-test.sh
tests/performance-tests/: README.md  quick-test.js  run-tests.sh  test-modules.js  test-proxy.js
(+13 files in other folders)
